k8s/2.reduce_drinks_service_errors/drinks-dep-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drinks-v1
  labels:
    app: drinks
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drinks
      version: v1
  template:
    metadata:
      labels:
        app: drinks
        version: v1
    spec:
      containers:
      - name: drinks
        image: meshery20/drink-producer:v1
        ports:
        - containerPort: 3001
