k8s/2.reduce_drinks_service_errors/drinks-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drinks
spec:
  hosts:
  - drinks
  http:
  - route:
    - destination:
        host: drinks
        subset: v1
